# SDL2-LZ4-Image

./: CMakeLists.txt  LICENSE.md  README.md  SDL_lz4_image_converter.c  benchmark.py  convert.c  profile.c
.github/: README.md
cmake/: FindLZ4.cmake
include/: SDL_lz4_image.h
include/SDL_lz4_image/: utils.h
src/: SDL_lz4_image.c
